# maro-orchestration

./: .coveragerc  .gitignore  BACKLOG.md  BACKLOG_DONE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOAL_BRAIN.md  MILESTONES.md  README.md  ROADMAP.md  VISION.md  fizzbuzz.py  pyproject.toml
.github/workflows/: ci.yml  pyPI-workflow.yml
archive/: observe_dashboard.py  test_observe_dashboard.py
bakeoff/: __init__.py  bench_graphiti.py  graphiti_adapter.py  mem0_adapter.py
deploy/caddy/: Caddyfile  Caddyfile.github-oauth  README.md  caddy.service  enable-github-oauth.sh
deploy/docker/: Dockerfile.executor
deploy/hermes/: PROPOSE_LANE.md  README.md  TWO_BOX_POC.md  dispatch.py  land.sh  maro-ssh-gate.sh  mini2-maro-dispatch-SKILL.md  mini2-maro-inbox.sh  notify-hermes.sh
deploy/systemd/: maro-heartbeat.service  maro-observe.service
docs/: ADAPTIVE_EXECUTION_DESIGN.md  ARCHITECTURE_NON_GOALS.md  ARCHITECTURE_OVERVIEW.md  BACKEND_RESILIENCE_DESIGN.md  BOUNDED_WORKSPACE.md  CAPABILITIES.md  CAPTAINS_LOG_EVENTS.md  CODING_NOTES.md  COMPOUND_THINKING_DESIGN.md  CONSTRAINT_ORCHESTRATION_AUDIT.md  CONSTRAINT_ORCHESTRATION_DESIGN.md  CONSTRAINT_ORCHESTRATION_REVIEW.md  CONTAINER_BURN_IN.md  CONTAINER_EXECUTOR_DESIGN.md  CONVENTIONS.md  DEFAULTS.md  DEV_PATTERNS.md  DRIVER_AND_WATCHER.md  DUMB_LOOP_AUDIT.md  END_TO_END.md  EXECUTION_FLOW.md  HOST_MONITORING.md  IMPLEMENTATION_HANDOFF.md  INDEX.md  INTENT_RESOLUTION_DESIGN.md  KNOWLEDGE_CRYSTALLIZATION.md  KNOWLEDGE_JOURNEY.md  LENSES.md  LOCAL_VALIDATOR.md  MEMORY_ARCHITECTURE.md  MEMORY_BAKEOFF.md  MEMORY_DECISION_BRIEF.md  MIGRATION.md  MODEL_ROUTE_EXPLORATION.md  NAVIGATOR_SCHEMA.md  PHASE_65_IMPLEMENTATION_PLAN.md  PORTABLE_LEARNING_DESIGN.md  PUBLISH_CHECKLIST.md  PURGATORIO_AUDIT.md  QUEUE_ADAPTER.md  (+23 more)
docs/audit-2026-07/: RECONCILIATION.md  findings-archaeology.md  findings-code-security.md  findings-data.md  findings-docs.md  findings-historian.md  findings-landscape.md  findings-ops.md  persona-skill-survey.md
docs/audit-2026-07-r2/: RECONCILIATION.md  findings-archaeology.md  findings-code-security.md  findings-data.md  findings-docs.md  findings-historian.md  findings-landscape.md  findings-ops.md
docs/conversations/: 2026-07-20-swarm-review-arc.md  2026-07-22-compound-thinking.md
docs/history/: 2026-03-17-mainline-plan.md  2026-03-24-factory-ai-research.md  2026-03-25-anthropic-harness-research.md  2026-03-25-memento-skills-research.md  2026-03-28-loop-scratchpad.md  2026-03-28-phase-audit.md  2026-03-30-bitter-lesson-analysis.md  2026-03-31-factory-mode-findings.md  2026-03-31-sources.md  2026-04-01-prediction-markets-research-summary.md  2026-04-04-plan-next-phase.md  2026-04-05-steal-list.md  2026-04-05-success-criteria-gap-audit.md  2026-04-13-phase-audit.md  2026-04-22-architecture.md  2026-05-12-adversarial-verification-brief.md  2026-05-12-adversarial-verification-report.md  2026-05-12-adversarial-verification.md  2026-05-12-md-claims-audit.md  2026-05-12-research-brief-findings-and-design.md  2026-05-12-research-brief-persistence-and-zoom.md  (+34 more)
lat.md/: core-loop.md  lat.md  quality-gates.md  self-improvement.md  worker-agents.md
personas/: README.md  assistant.md  data-analyst.md  garrytan.md  loop-validator.md
research/: ai-failure-task-patterns.md  validator-bakeoff-hosted-gemini-2026-07-16.json  validator-bakeoff-hosted-groq-2026-07-16.json  validator-bakeoff-linux-2026-07-16.json  validator-bakeoff-linux-qwen-0-5b-2026-07-16.json  validator-bakeoff-linux-qwen-1-5b-2026-07-16.json  validator-bakeoff-linux-qwen-3b-2026-07-16.json
scripts/: audit-phases.sh  blind-test-slycrel.sh  build-loop.sh  container-acceptance-probe.sh  gen_paraphrase_queries.py  harvest_corpus.py  host-check-notify.sh  host-check.sh  land.sh  lesson-funnel-stats.sh  lesson_funnel_stats.py  local-validator.sh  maro_export.py  probe-stats.sh  probe_stats.py  scope_ab_runner.py  session-reuse-spike.py  smoke.sh  test-cov.sh  test-safe.sh  validator-bakeoff.py  verdict-gap-stats.sh  verdict_gap_stats.py  viz-ctl.sh  worker_slice_ab.py  x-ct-reseed.sh
skills/: arch-core-loop.md  arch-interface-routing.md  arch-memory-knowledge.md  arch-platform.md  arch-quality-selfimprove.md  changelog_digest.md  code_review.md  deep_research.md  doc_summary.md  document_process.md  errand_research.md  monitor_diagnose.md  report_synthesize.md  research_brief.md  social_search.md  test_skill.md  watch_condition.md  web_extract.md
src/: age_stamp.py  agent_loop.py  ancestry.py  artifact_check.py  attribution.py  audit_policy.py  audit_repair.py  autonomy.py  backend_benchmark.py  background.py  backtest_metrics.py  backtester.py  benchmark_isolation.py  boot_protocol.py  bootstrap.py  bughunter.py  build_loop_runner.py  captains_log.py  channels.py  checkpoint.py  claim_probe.py  claim_verifier.py  cli.py  cli_args.py  closure_verify.py  codebase_graph.py  conductor.py  config.py  constraint.py  container_exec.py  convo_miner.py  correspondence.py  cross_ref.py  decision_prior.py  director.py  discretion_readout.py  doctor.py  eval.py  evolver.py  evolver_scans.py  (+116 more)
tests/: conftest.py  test_ab_variants.py  test_admission_gate.py  test_age_stamp.py  test_agent_loop.py  test_ancestry.py  test_artifact_check.py  test_audit_policy.py  test_audit_repair.py  test_background.py  test_benchmark_isolation.py  test_blocked_step_cutover.py  test_bootstrap_config.py  test_bootstrap_smoke.py  test_budget_gate.py  test_budget_runaway.py  test_build_loop_runner.py  test_build_loop_script.py  test_captains_log.py  test_checkpoint.py  test_checkpoint_extended.py  test_checkpoint_rundir.py  test_claim_probe.py  test_claim_verifier.py  test_cli.py  test_codebase_graph.py  test_concurrency_e2e.py  test_conductor.py  test_conductor_export.py  test_config.py  test_constraint.py  test_container_e2e.py  test_container_exec.py  test_contradiction_wiring.py  test_convo_miner.py  test_cross_ref.py  test_cuts_planning.py  test_dag_executor.py  test_defaults_doc.py  test_depth_cap_unified.py  (+111 more)
user/: CONFIG.md  CONTEXT.md  GOALS.md  README.md  SIGNALS.md
(+59 files in other folders)
