[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maro-orchestration"
version = "0.8.0"
description = "File-first autonomous orchestration system"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jeremy Stone" }]
keywords = ["autonomous-agents", "orchestration", "llm", "agent-framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
# pyyaml is the one mandatory dep: config.yml parsing is core, and without it
# every setting is SILENTLY ignored (config._load_yaml returns {}). Everything
# else stays graceful-ImportError guarded.
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/slycrel/maro-orchestration"
Repository = "https://github.com/slycrel/maro-orchestration"
Issues = "https://github.com/slycrel/maro-orchestration/issues"

[project.optional-dependencies]
telegram = ["requests>=2.28", "python-telegram-bot>=20.0"]
slack = ["slack-sdk>=3.0"]
gateway = ["websockets>=12.0"]
sandbox = []
memory = ["pyyaml>=6.0"]
all = ["requests>=2.28", "pyyaml>=6.0", "websockets>=12.0", "slack-sdk>=3.0", "beautifulsoup4>=4.12"]
dev = ["pytest>=7.0", "pytest-cov>=7.0", "requests>=2.28", "beautifulsoup4>=4.12", "pyflakes>=3.0"]

[project.scripts]
maro = "cli:main"
maro-bootstrap = "bootstrap:main"
maro-run = "agent_loop:main"
maro-handle = "handle:main"
maro-enqueue = "handle:enqueue_main"
maro-memory = "cli:_memory_main"
maro-persona = "cli:_persona_main"
maro-sandbox = "cli:_sandbox_main"
maro-skills = "cli:_skills_main"
maro-inspector = "inspector:main"
maro-knowledge = "knowledge:main"
maro-observe = "observe:main"
maro-slack = "slack_listener:main"
maro-gc = "gc_memory:main"
maro-introspect = "introspect:main"
maro-graduation = "graduation:main"
maro-task = "task_store:main"
maro-runs = "run_curation:main"
maro-notify-telegram = "notify_telegram:main"
maro-doctor = "doctor:main"
maro-factory-minimal = "factory_minimal:main"
maro-factory-thin = "factory_thin:main"
maro-test = "bootstrap:_smoke_main"
maro-bughunter = "bughunter:main"
maro-schedule = "scheduler:main"
maro-verify = "verification_agent:main"
maro-import = "workspace_import:main"
maro-thinkback = "thinkback:_cli_main"
maro-cross-ref = "cross_ref:_cli_main"
maro-checkpoint = "checkpoint:_cli_main"
maro-stop = "killswitch:main"
maro-mine = "convo_miner:main"
maro-preflight-stats = "pre_flight:_preflight_stats_main"
maro-evolver = "evolver:main"
maro-replay = "strategy_evaluator:main"
maro-tool-costs = "tool_cost_report:main"
maro-benchmark = "backend_benchmark:main"
maro-log = "captains_log:main"
maro-repo-scan = "repo_scan:main"
maro-codebase-graph = "codebase_graph:main"
maro-harness-optimizer = "harness_optimizer:main"

[tool.setuptools]
# src/ is a flat module layout (no package dir yet — Tier 4 subpackage move is
# the eventual fix). packages.find only discovers *packages*, so every module
# must be listed here or pip installs NOTHING (found live in the 2026-07-09
# docker clean-install trial: entry points crashed ModuleNotFoundError).
# Census tripwire: tests/test_packaging.py fails if src/*.py and this list drift.
package-dir = {"" = "src"}
# maro_assets is the ONE real package: shipped default skills/personas as
# package data (symlinks to the top-level dirs; the build copies real files).
packages = ["maro_assets"]
py-modules = [
    "agent_loop",
    "ancestry",
    "artifact_check",
    "attribution",
    "autonomy",
    "backend_benchmark",
    "background",
    "boot_protocol",
    "bootstrap",
    "bughunter",
    "build_loop_runner",
    "captains_log",
    "channels",
    "checkpoint",
    "claim_probe",
    "claim_verifier",
    "cli",
    "cli_args",
    "closure_verify",
    "codebase_graph",
    "compact_ab",
    "conductor",
    "config",
    "constraint",
    "conversation",
    "convo_miner",
    "correspondence",
    "cross_ref",
    "director",
    "doctor",
    "eval",
    "evolver",
    "evolver_scans",
    "evolver_store",
    "factory_minimal",
    "factory_thin",
    "fetch_tool",
    "file_lock",
    "gateway",
    "gc_memory",
    "goal_map",
    "graduation",
    "handle",
    "handle_queue",
    "harness_optimizer",
    "heartbeat",
    "hooks",
    "hybrid_search",
    "injection_guard",
    "inspector",
    "intent",
    "interrupt",
    "introspect",
    "jsonl_utils",
    "killswitch",
    "knowledge",
    "knowledge_bridge",
    "knowledge_lens",
    "knowledge_web",
    "lat_inject",
    "listener_core",
    "llm",
    "llm_errors",
    "llm_parse",
    "local_models",
    "loop_artifacts",
    "loop_blocked",
    "loop_execute",
    "loop_finalize",
    "loop_init",
    "loop_parallel",
    "loop_planning",
    "loop_post_step",
    "loop_report",
    "loop_types",
    "mcp_client",
    "memory",
    "memory_backends",
    "memory_bridge",
    "memory_jsonl",
    "memory_ledger",
    "memory_port",
    "memory_quality",
    "memory_sqlite",
    "metrics",
    "mission",
    "navigator",
    "navigator_prompt",
    "navigator_shadow",
    "notify",
    "notify_telegram",
    "observe",
    "orch",
    "orch_bridges",
    "orch_items",
    "persona",
    "planner",
    "playbook",
    "pre_flight",
    "prereq",
    "proc_lock",
    "provenance",
    "quality_gate",
    "recall",
    "repo_scan",
    "router",
    "rules",
    "run_curation",
    "runs",
    "runtime_tools",
    "sandbox",
    "scheduler",
    "scope",
    "secret_scrub",
    "security",
    "sheriff",
    "skill_lifecycle",
    "skill_loader",
    "skill_types",
    "skills",
    "slack_listener",
    "slow_update_scheduler",
    "sprint_contract",
    "step_exec",
    "strategy_evaluator",
    "task_store",
    "team",
    "telegram_listener",
    "thinkback",
    "thread_brain",
    "tool_cost_report",
    "tool_registry",
    "tool_search",
    "validation_shadow",
    "validator_roi",
    "verification_agent",
    "viz_server",
    "web_fetch",
    "workspace_import",
    "workers",
    "worktree",
]

[tool.setuptools.package-data]
maro_assets = ["skills/*.md", "personas/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q -m 'not slow'"
markers = [
    "slow: tests that take >2s (agent loop integration, background waits, CLI subprocess)",
]
